# CAAT-A-SWF-analyzer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: EVALUATION_BUNDLE.md  PUBLISHING.md  WORKFLOW_AND_REPORTS.md
src/: swf.py  swf_analyze_bank.py  swf_export_eval_bundle.py  swf_safe_bundle.py  swf_workflow.py
src/swf_anonymizer/: __init__.py  anonymizer.py  bank_analysis.py  bank_analysis_cli.py  ca_checker.py  cli.py  comparison.py  csv_export.py  eval_bundle.py  eval_bundle_cli.py  extraction.py  group_reports.py  keymap.py  models.py  output.py  pipeline.py  prep_type_checker.py  quality_checker.py  safe_bundle.py  stable_ids.py  structured.py  workflow.py
tests/: test_anonymizer.py  test_bank_analysis.py  test_ca_checker.py  test_comparison.py  test_eval_bundle.py  test_extraction.py  test_pipeline.py  test_prep_type_checker.py  test_safe_bundle.py  test_structured.py
