[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swf-anonymizer"
version = "0.1.0"
description = "Local-only SWF extraction, anonymization, and reporting pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = []

[project.scripts]
swf-anonymizer = "swf_anonymizer.cli:main"
swf-workflow = "swf_anonymizer.workflow:main"
swf-safe-bundle = "swf_anonymizer.safe_bundle:main"
swf-export-eval-bundle = "swf_anonymizer.eval_bundle_cli:main"
swf-analyze-bank = "swf_anonymizer.bank_analysis_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
